--- a/Aplicacion Desktop/PalcoNet/Forms/Publicaciones/EditarPublicacionesSeleccionForm.resx
+++ b/Aplicacion Desktop/PalcoNet/Forms/Publicaciones/EditarPublicacionesSeleccionForm.resx
@@ -117,44 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="brh636" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\brh636.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="brp502_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\brp502_1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="brp518_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\brp518_1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="brp740_grilla" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\brp740_grilla.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="brp760_grilla" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\brp760_grilla.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="brq306_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\brq306_1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="flechaDer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\flechaDer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="flechaIzq" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\flechaIzq.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="sc_brq294_det_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\sc_brq294_det_1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="sc_carry_on_control_remoto" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\sc_carry-on-control-remoto.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="sc_escalera5posiciones_det_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\sc_escalera5posiciones_det_1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ticket" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ticket.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_mg_3896" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\_mg_3896.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
+  <metadata name="publicacionModelBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>210, 17</value>
+  </metadata>
+  <metadata name="publicacionModelBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>210, 17</value>
+  </metadata>
 </root>
