--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -142,9 +142,6 @@
   <data name="sc_brq294_det_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Premios\sc_brq294_det_1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="sc_carry_on_control_remoto" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Premios\sc_carry-on-control-remoto.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="flechaIzq" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flechaIzq.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -159,5 +156,8 @@
   </data>
   <data name="config" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\config.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brq304_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Premios\brq304_2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
